fix unit tests
Signed-off-by: Kat Shen <katshen@amazon.com>